# publisher

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.patch  GEMINI.md  PR_SPOT_COLORS.md  README.md  agent-run.json  package-lock.json  pr_body_current.md
.github/workflows/: ci.yml  claude-scheduled.yml  claude.yml  issue-prioritizer.yml
.husky/: check-coverage  pre-commit
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: PKGBUILD  README.md  com.publisher.app.yml  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  document_service.rs  main.rs
apps/desktop/src-tauri/tests/: issue_113_dmg_release.rs
apps/web/: package-lock.json  package.json  playwright.config.ts
apps/web/playwright-report/: index.html
apps/web/src/: App.svelte
apps/web/src/lib/: types.ts
apps/web/src/lib/components/: ModalManager.svelte
apps/web/src/lib/components/layout/: FindBar.svelte  MenuBar.svelte  SidebarLeft.svelte  SidebarRight.svelte  StatusBar.svelte  Toolbar.svelte
apps/web/src/lib/components/modals/: NewDocModal.svelte  PrefsModal.svelte  StyleEditorModal.svelte  SwatchModal.svelte
apps/web/src/lib/components/workspace/: Workspace.svelte
apps/web/src/lib/stores/: document.svelte.ts  prefs.svelte.ts  ui.svelte.ts
apps/web/src/lib/utils/: color.ts  geometry.ts
apps/web/test-results/: junit.xml
apps/web/tests/e2e/: issue_128_ruler_alignment.spec.ts  issue_content_mode_persistence.spec.ts  issue_ruler_regression.spec.ts  issue_selection_ghosting.spec.ts  smoke.spec.ts  text_frame.spec.ts  text_frame_lifecycle.spec.ts
backend/: Cargo.toml
backend/src/: main.rs
crates/collab/: Cargo.toml
crates/collab/src/: lib.rs
crates/color/: Cargo.toml
crates/color/src/: lib.rs
crates/core/: Cargo.toml
crates/core/benches/: frame_allocation.rs
crates/core/src/: builder.rs  document_manager.rs  document_state.rs  history.rs  layout.rs  lib.rs  paper.rs  persistence.rs  units.rs
crates/core/tests/: issue_130_text_threading.rs  issue_40_document_lifecycle.rs
crates/export-epub/: Cargo.toml
crates/export-epub/src/: lib.rs
crates/export-pdf/: Cargo.toml
crates/export-pdf/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/typography/: Cargo.toml
crates/typography/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: agent-workflow.md
issues/: 41-text-frame-types.md
scripts/: agent-run  main-release-smoke
