[package]
name = "publisher-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
automerge.workspace = true

# For WASM builds: force UUID to use js feature for RNG support
# This avoids adding WASM dependencies to native builds
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.23", features = ["v4", "serde", "js"] }

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "frame_allocation"
harness = false
