[package]
name = "publisher-renderer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
publisher-core = { path = "../core" }
publisher-typography = { path = "../typography" }
publisher-color = { path = "../color" }
vello = { workspace = true }
wgpu = { workspace = true }
