[package]
name = "publisher-typography"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
publisher-core = { path = "../core" }
harfbuzz_rs = { version = "2.0", features = ["build-native-harfbuzz", "build-native-freetype"] }
freetype-rs = "0.35"
parley = "0.1"
serde = { workspace = true }
