[package]
name = "publisher-desktop"
version = "0.1.0"
description = "Publisher Desktop Application"
authors = ["Publisher Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc" }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
publisher-core = { path = "../../../crates/core" }
publisher-renderer = { path = "../../../crates/renderer" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
